--- a/plates/plates_site/templates/plates_site/navbar.html
+++ b/plates/plates_site/templates/plates_site/navbar.html
@@ -6,8 +6,11 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Plates</a>
+      <a class="navbar-brand" href="/">Plates</a>
     </div>
+    <ul class="nav navbar-nav">
+      <li><a href="/search">Search Plates</a></li>
+    </ul>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
       </ul>
