put title on pages

--- a/plates/plates_site/templates/plates_site/head.html
+++ b/plates/plates_site/templates/plates_site/head.html
@@ -1,3 +1,4 @@
+<title>Plates</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script   src="http://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
