--- a/plates/plates_site/templates/plates_site/locations_select.html
+++ b/plates/plates_site/templates/plates_site/locations_select.html
@@ -1,7 +1,9 @@
 <option>Alabama </option>
 <option>Alaska </option>
+<option>Alberta</option>
 <option>Arizona </option>
 <option>Arkansas </option>
+<option>British_Colombia</option>
 <option>California </option>
 <option>Colorado </option>
 <option>Connecticut </option>
@@ -19,6 +21,7 @@
 <option>Maine </option>
 <option>Maryland </option>
 <option>Massachusetts </option>
+<option>Manitoba</option>
 <option>Michigan </option>
 <option>Minnesota </option>
 <option>Mississippi </option>
@@ -26,17 +29,26 @@
 <option>Montana</option>
 <option>Nebraska </option>
 <option>Nevada </option>
+<option>New Brunswick</option>
 <option>New Hampshire </option>
 <option>New Jersey </option>
 <option>New Mexico </option>
 <option>New York </option>
+<option>Newfoundland and Labrador</option>
 <option>North Carolina </option>
 <option>North Dakota </option>
+<option>Northwest Territories</option>
+<option>Nova Scotia</option>
+<option>Nunavut</option>
 <option>Ohio </option>
 <option>Oklahoma </option>
 <option>Oregon </option>
+<option>Ontario</option>
 <option>Pennsylvania</option>
+<option>Prince Edward Island</option>
+<option>Quebec</option>
 <option>Rhode Island </option>
+<option>Saskatchewan</option>
 <option>South Carolina </option>
 <option>South Dakota </option>
 <option>Tennessee </option>
@@ -49,3 +61,4 @@
 <option>West Virginia </option>
 <option>Wisconsin </option>
 <option>Wyoming</option>
+<option>Yukon Territory</option>
