fix british columbia typo

--- a/plates/plates_site/templates/plates_site/locations_select.html
+++ b/plates/plates_site/templates/plates_site/locations_select.html
@@ -3,7 +3,7 @@
 <option>Alberta</option>
 <option>Arizona </option>
 <option>Arkansas </option>
-<option>British_Colombia</option>
+<option>British Colombia</option>
 <option>California </option>
 <option>Colorado </option>
 <option>Connecticut </option>
